Fixed layout issues

--- a/src/app/Sass/index.scss
+++ b/src/app/Sass/index.scss
@@ -82,6 +82,18 @@ body {
     }
 }
 
+.layout-root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.layout-root > main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
 .floating {
     animation: float 1s ease infinite;
 }
